fixed misaligned margins on right side

--- a/public/images/character.css
+++ b/public/images/character.css
@@ -83,7 +83,7 @@ body{
     justify-content: center!important;
     margin-top: 5px;
     margin-left: 10px;
-    margin-right: 10px;
+    margin-right: 20px;
     background-color: tan;
 }
 
